--- a/index.html
+++ b/index.html
@@ -25,23 +25,24 @@
                         <h1 class="title">ConcertQuest</h1>
                         <h1 class="subtitle">Discover concerts near you!</h1>
                     </div>
-                    <div clas="row">
-                    <div class="column left">
-                        <button class="button is-danger has-text-white">Find Concerts</button>
+                    <div class="container">
+                    <div class="box left">
                         <form id="form" role="search">
                             <input type="search" id="query" name="q"
                              placeholder="Search..."
                              aria-label="Search through site content">
-                            <button>Search</button>
+                             <button class="button is-danger has-text-white">Find Concerts</button>
+
                           </form>
                     </div>
-                    <div class="column right">
-                        <button class="button is-danger has-text-white">Get Directions</button>
+                    <div class="box right">
+
                         <form id="form" role="search">
                             <input type="search" id="query" name="q"
                              placeholder="Search..."
                              aria-label="Search through site content">
-                            <button>Get Directions</button>
+                             <button class="button is-danger has-text-white">Get Directions</button>
+                            
                           </form>
                     </div>
             </body>
